--- a/Login spotify.html
+++ b/Login spotify.html
@@ -17,12 +17,13 @@
         <p>Continue with phone number</p>
     </div><hr>
     <div class="form">
-        <form>
+        <form action="#">
             <label for="username">Email or Username</label>
-            <input type="text" id="username" name="username" placeholder="   Email or username">
+            <input type="text" id="username" name="username" placeholder="   Email or username" required>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="    password">
-            <input type="button" value="Log in">
+            <input type="password" id="password" name="password" placeholder="    password" required>
+            <i class="fas fa-eye" id="toggle-password" title="Show Password"></i>                 
+            <input type="button" value="Log in" type="submit">
         </form>
     </div>
     <div class="footer">
@@ -30,5 +31,17 @@
         <div class="p"><p>Dont have an account?</p><a href="#"> Sign up for Spotify</a></div>
     </div>
 </div>
+<script>
+document.getElementById("toggle-password").addEventListener("click", function() {
+    let passwordinput = document.getElementById("password");
+    if (passwordinput.type === "password") {
+        passwordinput.type = "text";
+        this.classList.add("fa-eye-slash");
+    } else {
+        passwordinput.type = "password";
+        this.classList.remove("fa-eye-slash");
+    }
+});
+</script>
 </body>
 </html>
